kubernetes/apps/secrets/external-secrets/cnp-es-cert-ctlr.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-cert-controller
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: external-secrets
      app.kubernetes.io/name: external-secrets-cert-controller
  egress:
    - toEntities:
        - kube-apiserver
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/component: monitoring
            app.kubernetes.io/name: vmagent
            app.kubernetes.io/instance: vm
            k8s:io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http:
              - method: "GET"
                path: "/metrics"
